force-app/main/default/objects/Scratch_Org_Creds__c/Scratch_Org_Creds__c.object-meta.xml
<CustomObject>
    <label>Scratch Org Creds</label>
    <nameField>
        <label>Scratch Org Details</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scratch Org Creds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>