force-app/main/default/objects/Scratch_Org_Creds__c/fields/Components_Change_Updated__c.field-meta.xml
<CustomField>
    <fullName>Components_Change_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Components Change Updated</label>
    <type>Checkbox</type>
</CustomField>