force-app/main/default/objects/Scratch_Org_Creds__c/fields/Components_Changed__c.field-meta.xml
<CustomField>
    <fullName>Components_Changed__c</fullName>
    <label>Components Changed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>