force-app/main/default/objects/Scratch_Org_Creds__c/fields/Components_Changed_Time__c.field-meta.xml
<CustomField>
    <fullName>Components_Changed_Time__c</fullName>
    <label>Components Changed Time</label>
    <type>DateTime</type>
</CustomField>