force-app/main/default/objects/Scratch_Org_Creds__c/fields/Req_ID__c.field-meta.xml
<CustomField>
    <fullName>Req_ID__c</fullName>
    <label>Req ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>