force-app/main/default/objects/Scratch_Org_Creds__c/fields/ReqID__c.field-meta.xml
<CustomField>
    <fullName>ReqID__c</fullName>
    <label>ReqID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>