force-app/main/default/objects/Scratch_Org_Creds__c/fields/ReqSFID__c.field-meta.xml
<CustomField>
    <fullName>ReqSFID__c</fullName>
    <label>ReqSFID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>